<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ICamera</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="register">REGISTER</string>
    <string name="retrive">RETRIVE</string>
    <string name="takePic">Take Photo</string>
    <string name="preview">Preview</string>
    <string name="remarks">Remarks</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="save">Save</string>
    <string name="my_location">My Location</string>
    <string name="distance">Distance</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_save_data">SaveDataActivity</string>
    <string name="title_activity_retrive">RetriveActivity</string>

</resources>
